# lxmesh

./: .gitignore  README.md  check.sh  pyproject.toml  setup.cfg  tox.ini
debian/: changelog  control  copyright  install  lxmesh.lxmesh-agent.service  postinst  py3dist-overrides  rules
docs/: INSTALL.md  USAGE.md
etc/iproute2/rt_protos.d/: lxmesh.conf
etc/lxmesh/: agent.yaml
etc/lxmesh/dnsmasq.d/: 50-lxmesh.conf
lxmesh/: agent.py  config.py  exceptions.py  lxd.py  state.py  websockets.py
lxmesh/dhcp/: __init__.py  exceptions.py  io.py
lxmesh/dhcp/state/: __init__.py  host.py  svi.py
lxmesh/netlink/: __init__.py  constants.py  exceptions.py  fixup.py  iproute.py  monitor.py  nftables.py
lxmesh/netlink/state/: __init__.py  address.py  device.py  fdb.py  mark.py  mdb.py  neighbour.py  nftables.py  route.py  service.py  svi.py  vxlan.py
scripts/: intercept-nd-solicit
