[metadata]
name = python-lxmesh
version = 0.1.0
description = Modules for LXMesh
url = https://github.com/safebits-tech/lxmesh
author = Luci Stanescu
author_email = luci@safebits.tech
platforms = POSIX
license = GPL-2.0
classifiers=
    # Development Status :: 1 - Planning
    # Development Status :: 2 - Pre-Alpha
    # Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    # Development Status :: 6 - Mature
    # Development Status :: 7 - Inactive
    Operating System :: POSIX
    Programming Language :: Python :: 3
project_urls =
    Documentation = https://github.com/safebits-tech/lxmesh
    Source = https://github.com/safebits-tech/lxmesh
    Tracker = https://github.com/safebits-tech/lxmesh/issues

[options]
packages = find:
install_requires =
    nftables
    pylxd
    pyroute2
    python-prctl
    systemd-python
    websockets >= 10
python_requires = >= 3.10

[options.packages.find]
include = lxmesh*

[flake8]
ignore = E221,E241,E501,W503
exclude = .git,build,.pybuild,debian
